--- a/index.html
+++ b/index.html
@@ -88,17 +88,7 @@
         </div>
 
         <!-- Hero Section -->
-        <section class="flex flex-col gap-10 md:flex-row md:justify-between md:items-center px-2">
-            <!-- Date Card -->
-            <div class="w-full md:w-1/4">
-                <div class="bg-white/5 backdrop-blur-lg rounded-2xl p-6 border border-white/10 text-center transition-all hover:bg-yellow-500/20 hover:text-yellow-300 hover:shadow-xl cursor-pointer animate-smooth-vibe">
-                    <div class="w-16 h-16 mx-auto mb-4 bg-gradient-to-br from-amber-400/20 to-yellow-300/20 rounded-full p-3 border border-amber-500/30">
-                        <img src="./date.png" class="w-full h-full mx-auto filter brightness-200 opacity-80" alt="Date Icon">
-                    </div>
-                    <p class="text-xl">তারিখ: ঈদের দ্বিতীয় দিন</p>
-                </div>
-            </div>
-
+        <section class="flex flex-col items-center gap-10 px-2">
             <!-- Middle Content -->
             <div class="w-full md:w-2/4 text-center">
                 <h1 class="mt-6 text-3xl sm:text-4xl md:text-6xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-orange-500 mb-4 leading-snug">
@@ -112,6 +102,16 @@
                     </div>
                 </div>
                 <p id="countdown" class="text-lg sm:text-xl mt-6 text-yellow-300"></p>
+            </div>
+
+            <!-- Date Card -->
+            <div class="w-full md:w-1/4">
+                <div class="bg-white/5 backdrop-blur-lg rounded-2xl p-6 border border-white/10 text-center transition-all hover:bg-yellow-500/20 hover:text-yellow-300 hover:shadow-xl cursor-pointer animate-smooth-vibe">
+                    <div class="w-16 h-16 mx-auto mb-4 bg-gradient-to-br from-amber-400/20 to-yellow-300/20 rounded-full p-3 border border-amber-500/30">
+                        <img src="./date.png" class="w-full h-full mx-auto filter brightness-200 opacity-80" alt="Date Icon">
+                    </div>
+                    <p class="text-xl">তারিখ: ঈদের দ্বিতীয় দিন</p>
+                </div>
             </div>
 
             <!-- Location Card -->
