--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 
         <!-- Top Navigation -->
         <nav class="flex justify-between items-center px-2 py-2 border-b border-white/10 bg-gradient-to-br from-indigo-900/40 to-blue-900/40 backdrop-blur-lg">
-            <span class="bg-gradient-to-r from-amber-500/20 to-yellow-300/20 px-4 py-2 rounded-xl text-amber-200 text-sm border border-amber-500/30 hover:from-amber-500/30 hover:to-yellow-300/30 transition-all shadow-lg">
+            <span class="bg-gradient-to-r from-amber-500/20 to-yellow-300/20 px-4 py-2 rounded-xl text-amber-200 text-xs border border-amber-500/30 hover:from-amber-500/30 hover:to-yellow-300/30 transition-all shadow-lg">
                 দেশের গর্ব আমাদের একত্রিত শক্তিতে
             </span>
-            <span class="bg-gradient-to-r from-amber-500/20 to-yellow-300/20 px-4 py-2 rounded-xl text-amber-200 text-sm border border-amber-500/30 hover:from-amber-500/30 hover:to-yellow-300/30 transition-all shadow-lg">
+            <span class="bg-gradient-to-r from-amber-500/20 to-yellow-300/20 px-4 py-2 rounded-xl text-amber-200 text-xs border border-amber-500/30 hover:from-amber-500/30 hover:to-yellow-300/30 transition-all shadow-lg">
                 নির্ভীক জাতি, শীর্ষে উঠবে
             </span>
         </nav>
