--- a/index.html
+++ b/index.html
@@ -101,7 +101,13 @@
                 </button>
             </a>
         </div> -->
-
+        <section class="text-center">
+            <a href="https://forms.gle/pRZTUu9GVZtgF6df7" target="_blank">
+                <button class="bg-gradient-to-r from-yellow-500 to-orange-400 text-white px-8 py-4 text-lg sm:text-xl font-bold rounded-xl shadow-lg hover:scale-105 transition-transform">
+                    <span class="animate-pop text-red-500">👉 রেজিস্ট্রেশন করুন এখনই</span>
+                </button>
+            </a>
+        </section>
         <!-- Hero Section -->
         <section class="flex flex-col items-center gap-10 px-2">
             <!-- Middle Content -->
