--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <!-- Location Card -->
             <div class="w-full md:w-1/4">
                 <div class="bg-white/5 backdrop-blur-lg rounded-2xl p-6 border border-white/10 text-center transition-all hover:bg-orange-500/20 hover:shadow-xl cursor-pointer animate-smooth-vibe">
-                    <a href="https://www.google.com/maps/dir/23.7608421,90.3601775/Bhutiapara+High+School/" target="_blank">
+                    <a href="https://www.google.com/maps/dir/23.7608421,90.3601775/Bhutiapara+High+School/@24.4561656,88.3123402,8z/data=!3m1!4b1!4m10!4m9!1m1!4e1!1m5!1m1!1s0x39fc9a0b226a84e1:0xdafffd24344c7f04!2m2!1d88.9386107!2d25.1628088!3e0?entry=ttu&g_ep=EgoyMDI1MDQxNi4xIKXMDSoASAFQAw%3D%3D" target="_blank">
                         <img src="https://cdn-icons-png.flaticon.com/512/684/684908.png" class="w-16 h-16 mx-auto mb-4" alt="Location Icon">
                     </a>
                     <p class="text-xl"> স্থান: ভুটিয়াপাড়া উচ্চ বিদ্যালয় মাঠ</p>
